--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,5 +3,38 @@
     padding: 0;  
 }
 body{
-    /* font-family: 'Work Sans'; */
+    font-family: 'Work Sans';
+}
+.container{
+    width: 1220px;
+    margin: 0 auto;
+}
+
+/* css starts here */
+.header-section{
+    background: rgba(255, 144, 14, 0.10);
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 2.9rem;
+}
+nav h2{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+nav >ul{
+    display: flex;
+    list-style: none;
+}
+nav ul li{
+    margin-left: 2.9rem;
+}
+nav ul li a{
+    text-decoration: none;
+    font-size: 1.125rem;
+    color: #424242;
+    font-weight: 500;
 }
